# kpty

./: .git-blame-ignore-revs  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  KF5PtyConfig.cmake.in  KF6PtyConfig.cmake.in  README.md  metainfo.yaml
autotests/: CMakeLists.txt  kptyprocesstest.cpp  kptyprocesstest.h
cmake/: FindUTEMPTER.cmake
po/af/: kpty5.po  kpty6.po
po/ar/: kpty5.po  kpty6.po
po/as/: kpty5.po  kpty6.po
po/ast/: kpty5.po  kpty6.po
po/az/: kpty5.po  kpty6.po
po/be/: kpty5.po  kpty6.po
po/be@latin/: kpty5.po  kpty6.po
po/bg/: kpty5.po  kpty6.po
po/bn/: kpty5.po  kpty6.po
po/bn_IN/: kpty5.po  kpty6.po
po/br/: kpty5.po  kpty6.po
po/bs/: kpty5.po  kpty6.po
po/ca/: kpty5.po  kpty6.po
po/ca@valencia/: kpty5.po  kpty6.po
po/crh/: kpty5.po  kpty6.po
po/cs/: kpty5.po  kpty6.po
po/csb/: kpty5.po  kpty6.po
po/cy/: kpty5.po  kpty6.po
po/da/: kpty5.po  kpty6.po
po/de/: kpty5.po  kpty6.po
po/el/: kpty5.po  kpty6.po
po/en_GB/: kpty5.po  kpty6.po
po/eo/: kpty5.po  kpty6.po
po/es/: kpty5.po  kpty6.po
po/et/: kpty5.po  kpty6.po
po/eu/: kpty5.po  kpty6.po
po/fa/: kpty5.po  kpty6.po
po/fi/: kpty5.po  kpty6.po
po/fr/: kpty5.po  kpty6.po
po/fy/: kpty5.po  kpty6.po
po/ga/: kpty5.po  kpty6.po
po/gd/: kpty5.po  kpty6.po
po/gl/: kpty5.po  kpty6.po
po/gu/: kpty5.po  kpty6.po
po/ha/: kpty5.po  kpty6.po
po/he/: kpty5.po  kpty6.po
po/hi/: kpty5.po  kpty6.po
po/hne/: kpty5.po  kpty6.po
po/hr/: kpty5.po  kpty6.po
po/hsb/: kpty5.po  kpty6.po
po/hu/: kpty5.po  kpty6.po
po/hy/: kpty5.po  kpty6.po
po/ia/: kpty5.po  kpty6.po
po/id/: kpty5.po  kpty6.po
po/is/: kpty5.po  kpty6.po
po/it/: kpty5.po  kpty6.po
po/ja/: kpty5.po  kpty6.po
po/ka/: kpty5.po  kpty6.po
po/kk/: kpty5.po  kpty6.po
po/km/: kpty5.po  kpty6.po
po/kn/: kpty5.po  kpty6.po
po/ko/: kpty5.po  kpty6.po
po/ku/: kpty5.po  kpty6.po
po/lb/: kpty5.po  kpty6.po
po/lt/: kpty5.po  kpty6.po
po/lv/: kpty5.po  kpty6.po
po/mai/: kpty5.po  kpty6.po
po/mk/: kpty5.po  kpty6.po
po/ml/: kpty5.po  kpty6.po
po/mr/: kpty5.po  kpty6.po
po/ms/: kpty5.po  kpty6.po
po/nb/: kpty5.po  kpty6.po
po/nds/: kpty5.po  kpty6.po
po/ne/: kpty5.po  kpty6.po
po/nl/: kpty5.po  kpty6.po
po/nn/: kpty5.po  kpty6.po
po/oc/: kpty5.po  kpty6.po
po/or/: kpty5.po  kpty6.po
po/pa/: kpty5.po  kpty6.po
po/pl/: kpty5.po  kpty6.po
po/ps/: kpty5.po  kpty6.po
po/pt/: kpty5.po  kpty6.po
po/pt_BR/: kpty5.po  kpty6.po
po/ro/: kpty5.po  kpty6.po
po/ru/: kpty5.po  kpty6.po
po/sa/: kpty6.po
po/se/: kpty5.po  kpty6.po
po/si/: kpty5.po  kpty6.po
po/sk/: kpty5.po  kpty6.po
po/sl/: kpty5.po  kpty6.po
po/sq/: kpty5.po  kpty6.po
po/sr/: kpty5.po  kpty6.po
po/sr@ijekavian/: kpty5.po  kpty6.po
po/sr@ijekavianlatin/: kpty5.po  kpty6.po
po/sr@latin/: kpty5.po  kpty6.po
po/sv/: kpty5.po  kpty6.po
po/ta/: kpty5.po  kpty6.po
po/te/: kpty5.po  kpty6.po
po/tg/: kpty5.po  kpty6.po
po/th/: kpty5.po  kpty6.po
po/tr/: kpty5.po  kpty6.po
po/tt/: kpty5.po  kpty6.po
po/ug/: kpty5.po  kpty6.po
po/uk/: kpty5.po  kpty6.po
po/uz/: kpty5.po  kpty6.po
po/uz@cyrillic/: kpty5.po  kpty6.po
po/vi/: kpty5.po  kpty6.po
po/wa/: kpty5.po  kpty6.po
po/x-test/: kpty5.po
po/xh/: kpty5.po  kpty6.po
po/zh_CN/: kpty5.po  kpty6.po
po/zh_HK/: kpty5.po  kpty6.po
po/zh_TW/: kpty5.po  kpty6.po
src/: CMakeLists.txt  ConfigureChecks.cmake  Messages.sh  config-pty.h.cmake  kgrantpty.c  kpty-index.qdoc  kpty.cpp  kpty.h  kpty.qdoc  kpty.qdocconf  kpty_p.h  kptydevice.cpp  kptydevice.h  kptyprocess.cpp  kptyprocess.h
